# puzzle

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  examples  examples.txt  fraction.h  main.cpp  puzzle.cpp  puzzle.h
.github/workflows/: build-test.yml
src/: arena.cpp  arena.hpp  expr.hpp  fraction.hpp  generic.cpp  linear.cpp  main.cpp  puzzle.cpp  puzzle.hpp  test.cpp  util.hpp
